[package]
name = "strslice"
version = "0.1.3"
edition = "2024"
authors = [
    "Subh <subhajitchaudhury05@gmail.com>",
    "Naman <naman312000@gmail.com>",
    "Rohit <rohitnarnolia88@gmail.com>",
]
description = "Rust library that provides zero copy string iterators for working with string slices. The library offers iterators similar to standard Rust string methods"
license = "MIT"
repository = "https://github.com/subhdotsol/strslice"
homepage = "https://github.com/subhdotsol/strslice"
readme = "README.md"
keywords = ["string", "iterators", "rust", "slice"]
categories = ["text-processing", "no-std"]

[dependencies]
